manifests/media/jellyfin/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
  namespace: media
  annotations:
    ignore-check.kube-linter.io/no-rolling-update-strategy: "Using Recreate strategy to avoid issues with ReadWriteOnce volumes"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jellyfin
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: jellyfin
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        fsGroup: 1000
        seccompProfile:
          type: RuntimeDefault
      restartPolicy: Always
      containers:
        - name: jellyfin
          image: jellyfin/jellyfin@sha256:baba630419915985442f315f08b0cf46d9f4c8a0cc4bd38e94a6d35751dd5ef5
          ports:
            - containerPort: 8096
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop: ["ALL"]
            runAsNonRoot: true
          resources:
            claims:
              - name: i915
          volumeMounts:
            - name: tmp
              mountPath: /tmp
            - name: config
              mountPath: /config
            - name: cache
              mountPath: /cache
            - name: media
              mountPath: /media
              # readOnly: true
          livenessProbe:
            httpGet:
              path: /health
              port: 8096
          readinessProbe:
            httpGet:
              path: /health
              port: 8096
      volumes:
        - name: tmp
          emptyDir: {}
        - name: config
          persistentVolumeClaim:
            claimName: jellyfin-config
        - name: cache
          emptyDir: {}
        - name: media
          persistentVolumeClaim:
            claimName: media
      resourceClaims:
        - name: i915
          resourceClaimTemplateName: i915
