manifests/media/jellyfin/service.yaml

apiVersion: v1
kind: Service
metadata:
  name: jellyfin
  namespace: media
  annotations:
    metallb.universe.tf/loadBalancerIPs: "10.0.2.36"
spec:
  type: LoadBalancer
  selector:
    app: jellyfin
  ports:
    - name: http
      port: 8096
      targetPort: 8096
